--- a/_includes/mailchimp.html
+++ b/_includes/mailchimp.html
@@ -5,10 +5,10 @@
   /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
      We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
-<div id="mc_embed_signup" >
+<div id="mc_embed_signup">
 <form action="//liveandthink.us7.list-manage.com/subscribe/post?u=933e921fc6c4b43fe2a2caf7a&amp;id=8fd176db97" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-  <label for="mce-EMAIL">Signup to get cool stories and ideas in your inbox</label>
+  <label for="mce-EMAIL">Get cool stories and ideas from me</label>
   <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_933e921fc6c4b43fe2a2caf7a_8fd176db97" tabindex="-1" value=""></div>
